# eggwatch

./: CMakeLists.txt  install.sh  main.c  test.c
src/: main.c  menu.c  menu.h
